--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "lint-staged": "^12.1.2",
     "prettier": "^2.5.0",
     "prop-types": "^15.7.2",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
+    "redux-persist": "^6.0.0"
   }
 }
